# fmchisel

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  NOTICE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml  publish-nightly.yml  publish-release.yml
examples/distillation/: README.md  run.sh  training.py
examples/pruning/: README.md  alps_24_ignore_attn.yaml  main_pruning.py  pruning_utils.py  run.sh  run_recipe.sh
examples/quantization/: README.md  main_quantization.py  quantization_utils.py  run_quantization.sh
examples/quantization/recipes/: w4a16_int.yaml  w8a8_int.yaml
examples/structured_pruning/: README.md  main_structured_pruning.py  run.sh  structured_pruning_utils.py
src/fmchisel/: __init__.py  config.py  modifiers.py
src/fmchisel/data/: calibration_datautil.py  collator.py  datasets.py
src/fmchisel/distillation/: __init__.py  config.py  losses.py  models.py
src/fmchisel/models/: __init__.py  models.py
src/fmchisel/optimizers/: adamw_schedulefree.py
src/fmchisel/pruning/alps/: base.py
src/fmchisel/pruning/alps/utils/: alps_sparsify.py
src/fmchisel/pruning/osscar/: base.py
src/fmchisel/quantization/quantease/: base.py
src/fmchisel/utils/: __init__.py  callbacks.py  schedulefree_utils.py  train_utils.py
test/compression/: test_alps.py  test_cleaning.py  test_modifiers.py  test_osscar.py  test_pack.py  test_quantease.py  utils.py
test/data/: test_calibration_data.py
test/distillation/: test_config.py  test_loss.py
test/optimizers/: test_adamw_schedulefree.py
(+3 files in other folders)
